Update and rename intex1.html to intex.html

--- a/intex.html
+++ b/intex.html
@@ -191,13 +191,13 @@ body {
 
     <script>
     function openNewTab1() {
-        window.open("intex2.html", "_self");
+        window.open("StockHub.html", "_self");
     }
     function openNewTab2() {
-        window.open("intex5.html", "_self");
+        window.open("tutorial.html", "_self");
     }
     function openNewTab3() {
-        window.open("intex6.html", "_self");
+        window.open("AiChat.html", "_self");
     }
     </script>
 </body>
