Update and rename intex5.html to tutorial.html

--- a/tutorial.html
+++ b/tutorial.html
@@ -218,7 +218,7 @@
 
   <script>
     function openNewTab() {
-      window.open('intex1.html', '_self');
+      window.open('intex.html', '_self');
     }
 
     document.querySelector('.footer-icon').addEventListener('click', openNewTab);
