--- a/AiChat.html
+++ b/AiChat.html
@@ -175,7 +175,7 @@
 
   <script>
     function openNewTab() {
-      window.open('intex1.html', '_self');
+      window.open('intex.html', '_self');
     }
 
     document.querySelector('.footer-icon').addEventListener('click', openNewTab);
