--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
         </div>
     </div>
 
-    <div class="navigation-menu">
-        <button onclick="openNewTab('StockHub.html')">Stock Hub</button>
-        <button onclick="openNewTab('tutorial.html')">Tutorial</button>
-        <button onclick="openNewTab('AiChat.html')">AI Chat</button>
-    </div>
-
     <div class="main-content">
-        <h1>Welcome to StockHub</h1>
+        <h1 style="text-align: center;">Welcome to StockHub</h1>
     </div>
 
     <div class="footer-container">
+        <div class="footer-bottom" style="display: flex; justify-content: space-evenly; align-items: center;">
+            <button class="footer-button" onclick="openNewTab('StockHub.html')">Stock Hub</button>
+            <button class="footer-button" onclick="openNewTab('tutorial.html')">Tutorial</button>
+            <button class="footer-button" onclick="openNewTab('AiChat.html')">AI Chat</button>
+        </div>
         <div class="footer-icon">
             <i class="fa-solid fa-circle-left"></i>
         </div>
