--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Link to shared CSS file -->
     <link rel="stylesheet" href="styles/common.css">
+    <!-- FontAwesome for icons -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"></script>
     <!-- Link to shared JavaScript file -->
     <script src="scripts/common.js" defer></script>
@@ -23,15 +24,17 @@
     </div>
 
     <div class="main-content">
-        <h1 style="text-align: center;">Welcome to StockHub</h1>
+        <h1>Welcome to StockHub</h1>
     </div>
 
     <div class="footer-container">
-        <div class="footer-bottom" style="display: flex; justify-content: space-evenly; align-items: center;">
+        <!-- Footer Buttons -->
+        <div class="footer-buttons">
             <button class="footer-button" onclick="openNewTab('StockHub.html')">Stock Hub</button>
             <button class="footer-button" onclick="openNewTab('tutorial.html')">Tutorial</button>
             <button class="footer-button" onclick="openNewTab('AiChat.html')">AI Chat</button>
         </div>
+        <!-- Footer Back Icon -->
         <div class="footer-icon">
             <i class="fa-solid fa-circle-left"></i>
         </div>
