--- a/index.html
+++ b/index.html
@@ -3,230 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document1</title>
+    <title>StockHub - Home</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #0d0b14;
-    color: white;
-    width: 100%;
-}
-
-.header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 30px;
-    background-color: #151522;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-}
-
-.header-left,
-.header-right {
-    display: flex;
-    align-items: center;
-}
-
-.header-container img {
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(113, 81, 245, 0.8);
-}
-
-.settings-icon {
-    cursor: pointer;
-    padding: 10px;
-}
-
-.settings-icon i {
-    font-size: 24px;
-    color: #1f7aff;
-}
-
-.navigation-menu {
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    background-color: #1e1e2f;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-}
-
-.navigation-menu > div {
-    padding: 10px 20px;
-    background-color: #2a2a3d;
-    color: white;
-    border-radius: 12px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    box-shadow: 0 0 8px rgba(31, 122, 255, 0.4);
-}
-
-.navigation-menu > div:hover {
-    background-color: #1f7aff;
-    color: white;
-}
-
-.main-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 450px;
-    padding: 30px;
-    background: linear-gradient(135deg, #1a1a2e, #16213e);
-    color: white;
-    text-align: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-    font-size: 18px;
-}
-
-.main-content h3 {
-    font-size: 28px;
-    font-weight: 700;
-    margin-bottom: 20px;
-}
-
-.main-content ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.main-content li {
-    margin: 10px 0;
-    font-size: 18px;
-    line-height: 1.6;
-}
-
-
-.list-container {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 15px;
-    background-color: #1e1e2f;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-}
-
-.list-left,
-.list-right {
-    width: 45%;
-    padding: 20px;
-    background-color: #2a2a3d;
-    border-radius: 12px;
-    color: white;
-    text-align: center;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    box-shadow: 0 0 10px rgba(31, 122, 255, 0.2);
-}
-
-.list-left:hover,
-.list-right:hover {
-    background-color: #1f7aff;
-    color: white;
-}
-
-.footer-container {
-    background-color: #151522;
-    padding: 20px;
-    color: white;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-}
-
-.footer-top {
-    height: 40px;
-    background-color: #1e1e2f;
-    border-radius: 12px;
-    margin-bottom: 10px;
-    box-shadow: 0 0 8px rgba(31, 122, 255, 0.4);
-}
-
-.footer-bottom {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 20px;
-}
-
-.footer-button {
-    padding: 10px 20px;
-    background-color: #1f7aff;
-    color: white;
-    border: none;
-    border-radius: 12px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-}
-
-.footer-button:hover {
-    background-color: #957dfa;
-}
-
-
-    </style>
+    <!-- Link to shared CSS file -->
+    <link rel="stylesheet" href="styles/common.css">
+    <!-- Link to FontAwesome for icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <!-- Link to Lottie Animations -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/lottie.min.js" defer></script>
+    <!-- Link to shared JavaScript file -->
+    <script src="scripts/common.js" defer></script>
 </head>
 <body>
+    <!-- Header Section -->
     <div class="header-container">
-        <div class="header-left"></div>
         <img src="logo.jpg" alt="Logo">
-        <div class="header-right">
-            <div class="settings-icon">
-                <i class="fa-solid fa-gear"></i>
-            </div>
-        </div>
+        <h2 style="color: #fff;">StockHub</h2>
     </div>
 
-    <div class="navigation-menu">
-        <div class="menu-item1"></div>
-        <div class="menu-item2"></div>
-        <div class="menu-item3"></div>
-        <div class="menu-item4"></div>
-    </div>
-
+    <!-- Main Content Section with Graphics -->
     <div class="main-content">
-        <h3>Our platform empowers you to:</h3>
-        <ul>
-            <li>Instantly screen stocks using real-time financial, technical, and sentiment data.</li>
-            <li>Create personalized portfolios optimized by machine learning algorithms.</li>
-            <li>Receive actionable insights, risk alerts, and performance boosters—powered by AI.</li>
-        </ul>
-    </div>
-    
+        <div class="welcome-container">
+            <h1>Welcome to StockHub</h1>
+            <p>Your one-stop solution for stock predictions and analysis.</p>
+        </div>
 
-    <div class="list-container">
-        <div class="list-left">Exchange</div>
-        <div class="list-right">Wallet</div>
+        <!-- Adding a Lottie Animation -->
+        <div id="lottie-graphic" class="animation-container"></div>
+        <script>
+            // Load Lottie Animation
+            const lottieContainer = document.getElementById('lottie-graphic');
+            lottie.loadAnimation({
+                container: lottieContainer,
+                renderer: 'svg',
+                loop: true,
+                autoplay: true,
+                path: 'https://assets5.lottiefiles.com/packages/lf20_jcikwtux.json' // Replace with a stock/finance animation
+            });
+        </script>
     </div>
 
+    <!-- Footer Section with Buttons -->
     <div class="footer-container">
-        <div class="footer-top"></div>
-        <div class="footer-bottom">
-            <button class="footer-button" onclick="openNewTab1()">Stock-hub</button>
-            <button class="footer-button" onclick="openNewTab2()">Tutorial</button>
-            <button class="footer-button" onclick="openNewTab3()">AI Chat</button>
+        <!-- Footer Buttons -->
+        <div class="footer-buttons">
+            <button class="footer-button" onclick="openNewTab('StockHub.html')">
+                <i class="fa-solid fa-chart-line"></i> Stock Hub
+            </button>
+            <button class="footer-button" onclick="openNewTab('tutorial.html')">
+                <i class="fa-solid fa-graduation-cap"></i> Tutorial
+            </button>
+            <button class="footer-button" onclick="openNewTab('AiChat.html')">
+                <i class="fa-solid fa-comments"></i> AI Chat
+            </button>
         </div>
     </div>
-
-    <script>
-    function openNewTab1() {
-        window.open("StockHub.html", "_self");
-    }
-    function openNewTab2() {
-        window.open("tutorial.html", "_self");
-    }
-    function openNewTab3() {
-        window.open("AiChat.html", "_self");
-    }
-    </script>
 </body>
 </html>
