--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StockHub - Home</title>
+    <title>Finovex - Home</title>
 
     <!-- Link to shared CSS file -->
     <link rel="stylesheet" href="styles/common.css">
@@ -24,7 +24,7 @@
     <!-- Main Content Section with Graphics -->
     <div class="main-content">
         <div class="welcome-container">
-            <h1>Welcome to StockHub</h1>
+            <h1>Welcome to Finovex</h1>
             <p>Your one-stop solution for stock predictions and analysis.</p>
         </div>
 
