--- a/StockHub.html
+++ b/StockHub.html
@@ -303,7 +303,7 @@
   displayStocks(stockData);
 
   function openNewTab() {
-      window.open('intex.html', '_self');
+      window.open('index.html', '_self');
     }
 
     document.querySelector('.footer-icon').addEventListener('click', openNewTab);
