--- a/AiChat.html
+++ b/AiChat.html
@@ -7,11 +7,12 @@
   <link rel="stylesheet" href="styles/common.css" />
   <script src="scripts/common.js" defer></script>
   <style>
-    /* Chat page styling inspired by ChatGPT/Copilot UI */
+    /* Chat page styling inspired by ChatGPT/Copilot UI while using the same color scheme as the rest of the app */
     body {
-      background-color: #F7F7F8;
+      background-color: #151522; /* match common dark background */
       margin: 0;
       font-family: Arial, sans-serif;
+      color: #fff;
     }
     .chat-header {
       background-color: #343541;
@@ -24,6 +25,18 @@
       width: 100%;
       z-index: 10;
       border-bottom: 1px solid #444;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .back-button {
+      background-color: #1f7aff;
+      border: none;
+      color: #fff;
+      padding: 6px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
     }
     .chat-container {
       margin-top: 60px;
@@ -35,7 +48,7 @@
       flex: 1;
       overflow-y: auto;
       padding: 20px;
-      background: #ececec;
+      background: #0d0b14;
     }
     .message {
       margin-bottom: 15px;
@@ -72,26 +85,28 @@
     }
     .timestamp {
       font-size: 12px;
-      color: #888;
+      color: #bbb;
     }
     .chat-input-container {
       padding: 10px 20px;
-      background: #f1f1f1;
+      background: #21212a;
       display: flex;
       align-items: center;
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #444;
     }
     .chat-input {
       flex: 1;
       padding: 12px 15px;
-      border: 1px solid #ddd;
+      border: 1px solid #444;
       border-radius: 20px;
       font-size: 16px;
+      background: #0d0b14;
+      color: #fff;
     }
     .chat-send-btn {
       margin-left: 10px;
       padding: 12px 20px;
-      background-color: #343541;
+      background-color: #1f7aff;
       color: #fff;
       border: none;
       border-radius: 20px;
@@ -105,7 +120,8 @@
 </head>
 <body>
   <div class="chat-header">
-    AI Chat
+    <span>AI Chat</span>
+    <button class="back-button" onclick="window.location.href='index.html'">Back</button>
   </div>
   <div class="chat-container">
     <div id="chatMessages" class="chat-messages">
