--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header Section -->
     <div class="header-container">
         <img src="logo.jpg" alt="Logo">
-        <h2 style="color: #fff;">StockHub</h2>
+        <h2 style="color: #fff;">Finovex</h2>
     </div>
 
     <!-- Main Content Section with Graphics -->
