--- a/Query.html
+++ b/Query.html
@@ -1,72 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Query</title>
-    <!-- We assume styles/common.css is already linked in index.html, so we include only page-specific styling here if needed -->
-    <link rel="stylesheet" href="styles/common.css">
-    <!-- Use common.js for shared functions (like fetchData & openNewTab) -->
-    <script src="scripts/common.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stock Query</title>
+  <link rel="stylesheet" href="styles/common.css" />
+  <style>
+    body {
+      background-color: #151522;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: #21212a;
+      padding: 20px;
+      border-radius: 8px;
+    }
+    h1 {
+      text-align: center;
+    }
+    .input-group {
+      display: flex;
+      margin-bottom: 20px;
+    }
+    .input-group input {
+      flex: 1;
+      padding: 12px;
+      border: 1px solid #444;
+      border-radius: 4px;
+      font-size: 16px;
+      background: #0d0b14;
+      color: #fff;
+    }
+    .input-group button {
+      padding: 12px 20px;
+      margin-left: 10px;
+      border: none;
+      border-radius: 4px;
+      background-color: #1f7aff;
+      color: #fff;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    .result {
+      background: #343541;
+      padding: 15px;
+      border-radius: 4px;
+      white-space: pre-wrap;
+      line-height: 1.5;
+    }
+    .back-link {
+      display: block;
+      text-align: center;
+      margin-top: 20px;
+      color: #1f7aff;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-    <div class="header-container">
-        <img src="logo.jpg" alt="Logo">
-        <h2 style="color:#fff;">Stock Query</h2>
+  <div class="container">
+    <h1>Stock Prediction Query</h1>
+    <div class="input-group">
+      <input type="text" id="tickerInput" placeholder="Enter stock ticker (e.g., TSLA, TCS.NS)" />
+      <button id="queryBtn">Get Prediction</button>
     </div>
-
-    <div class="main-content" style="padding: 20px;">
-        <h1>Enter a Stock Symbol for Prediction</h1>
-        <textarea class="que" style="width:80%; height:100px; margin-top:20px;" placeholder="For example: AAPL"></textarea>
-        <br>
-        <button class="footer-button" onclick="handleQuery()">Search</button>
-    </div>
-
-    <div class="footer-container">
-        <!-- You can reuse footer buttons here if needed -->
-        <div class="footer-buttons">
-            <button class="footer-button" onclick="openNewTab('StockHub.html')">
-                <i class="fa-solid fa-chart-line"></i> Stock Hub
-            </button>
-            <button class="footer-button" onclick="openNewTab('tutorial.html')">
-                <i class="fa-solid fa-graduation-cap"></i> Tutorial
-            </button>
-            <button class="footer-button" onclick="openNewTab('AiChat.html')">
-                <i class="fa-solid fa-comments"></i> AI Chat
-            </button>
-        </div>
-    </div>
-
-    <script>
-      // Sends a POST request to the Flask '/predict' endpoint with the given ticker.
-      async function handleQuery() {
-          const queryText = document.querySelector('.que').value.trim();
-          if (!queryText) {
-              alert("Please enter a stock symbol.");
-              return;
-          }
-          try {
-              const data = await fetchData("http://127.0.0.1:5000/predict", {
-                  method: "POST",
-                  headers: { "Content-Type": "application/json" },
-                  body: JSON.stringify({ ticker: queryText })
-              });
-              if (data && !data.error) {
-                  alert(`Prediction Results:
-Market Trend: ${data.market_trend}
-Tomorrow Open: ₹${data.tomorrow_open.toFixed(2)}
-Tomorrow Close: ₹${data.tomorrow_close.toFixed(2)}
-Next Month Predictions: ${data.next_month.map(x => "₹" + x.toFixed(2)).join(", ")}
-Confidence Range: ₹${data.confidence_range[0].toFixed(2)} - ₹${data.confidence_range[1].toFixed(2)}
-                  `);
-              } else if (data && data.error) {
-                  alert(`Error: ${data.error}`);
-              }
-          } catch (error) {
-              console.error("Error in handleQuery:", error);
-              alert("An unexpected error occurred. Please try again later.");
-          }
+    <div id="result" class="result"></div>
+    <a class="back-link" href="index.html">Back to Home</a>
+  </div>
+  <script>
+    document.getElementById('queryBtn').addEventListener('click', async function() {
+      const ticker = document.getElementById('tickerInput').value.trim();
+      if (!ticker) {
+        document.getElementById('result').textContent = "Please enter a valid ticker symbol.";
+        return;
       }
-    </script>
+      document.getElementById('result').textContent = "Fetching prediction...";
+      try {
+        const response = await fetch(`/predict/${ticker}`);
+        const data = await response.json();
+        if (data.error) {
+          document.getElementById('result').textContent = data.error;
+        } else {
+          const resultText = `Ticker: ${data.ticker}
+Predicted Opening Price: ${data.tomorrow_prediction.opening.toFixed(2)}
+Predicted Closing Price: ${data.tomorrow_prediction.closing.toFixed(2)}
+Market Trend: ${data.market_trend}`;
+          document.getElementById('result').textContent = resultText;
+        }
+      } catch (error) {
+        console.error("Error fetching prediction:", error);
+        document.getElementById('result').textContent = "Error: Unable to retrieve stock prediction.";
+      }
+    });
+  </script>
 </body>
 </html>
