--- a/Query.html
+++ b/Query.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stock Query</title>
+  <title>Stock Prediction Query</title>
   <link rel="stylesheet" href="styles/common.css" />
   <style>
     body {
