--- a/AiChat.html
+++ b/AiChat.html
@@ -132,12 +132,10 @@
     <span>AI Chat</span>
     <button class="back-button" onclick="window.location.href='index.html'">Back</button>
   </div>
-  <div class="chat-container">
-    <div id="chatMessages" class="chat-messages"></div>
-    <div class="chat-input-container">
-      <input id="chatInput" class="chat-input" type="text" placeholder="Enter stock ticker (ex: stock: TSLA)" />
-      <button id="chatSendBtn" class="chat-send-btn">Send</button>
-    </div>
+  <div class="chat-input-container">
+  <input type="text" class="chat-input" placeholder="Enter stock ticker (e.g., TSLA)" />
+  <button class="chat-send-btn">Send</button>
+</div>
   </div>
   <script>
     function getCurrentTimestamp() {
